# accredit

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
contracts-evm/: .env.example  .gitignore  AGENTS.md  README.md  foundry.toml
contracts-evm/demo/: README.md  run-demo.sh
contracts-evm/demo-record/: README.md  package.json  pnpm-lock.yaml  record.mjs
contracts-evm/docs/: ai-operator-spec.md  demo-script.md  deployment-testnet.md  growth-engine-spec.md  pitch.md  runbook-mainnet.md  runbook-testnet.md  ui-story.md
contracts-evm/reviews/: 001-testnet-deploy.md  002-ai-aml-scorer.md  003-compliant-wrapper.md  004-demo.md  005-ml-scorer.md  006-ui.md  007-ui-story.md  008-operator-ui.md  010-ai-operator.md  013-ops-console.md  014-growth-engine.md  015-run-to-populate.md
contracts-evm/scorer/: package.json  pnpm-lock.yaml  tsconfig.json
contracts-evm/script/: Bootstrap.s.sol  Deploy.s.sol  DeployWrapper.s.sol  verify.sh
contracts-evm/src/: AmlOracle.sol  CompliantToken.sol  CompliantWrapper.sol  IdentityRegistry.sol  MockHSP.sol  MockUSDC.sol  ModularCompliance.sol
contracts-evm/test/: Compliance.t.sol  CompliantWrapper.t.sol
contracts-evm/ui/: .env.local.example  README.md  package.json  pnpm-lock.yaml
docs/: architecture.md  integration.md  sovereign-integration.md  sovereign-sdk.md
docs/programs/: compliant-wrapper.md
docs/sdk/: getting-started.md  kyc-providers.md  (+2 more)
programs/compliant-wrapper/: Cargo.toml
programs/compliant-wrapper/src/: errors.rs  lib.rs  state.rs
tests/: router.ts
(+48 files in other folders)
