[package]
name = "compliant-wrapper"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compliant asset wrapper with KYC-gated Token-2022 wrapped tokens"

[lib]
crate-type = ["cdylib", "lib"]
name = "compliant_wrapper"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
accredit-types = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
